# noise-xk-c

./: CMakeLists.txt  LICENSE  README.md  main.c
lib/blake2/: hkdf_blake2s.c  hkdf_blake2s.h  hmac_blake2s.c  hmac_blake2s.h
lib/noise_xk/: NoiseXK.c  NoiseXK.h  noise_xk.c  noise_xk.h
libsodium/lib/pkgconfig/: libsodium.pc
noise_xk/: ArduinoTypes.h
src/: blake2_hmac_test.cc  main.c  main2.c  tester_hmac.c
tests/: blake2_hmac_test.cc  hkdf_blake2_tests.cc  hmac_blake2_tests.cc  noise_xk_tests.cc
